fix btn spacing on modal

--- a/angular/src/app/modal/modal.component.scss
+++ b/angular/src/app/modal/modal.component.scss
@@ -44,6 +44,7 @@
     padding: var(--space-sm) var(--space) 0 var(--space);
 
     button:last-child {
+      padding: var(--space-sm) var(--space) var(--space-sm) var(--space);
       height: 2rem;
       width: 2rem;
       position: absolute;
@@ -54,8 +55,7 @@
   }
 
   .content {
-    border-top: 0.1rem solid var(--accent);
-    border-bottom: 0.1rem solid var(--accent);
+    border-bottom: 0.1rem solid var(--black);
     padding: var(--space);
     overflow: auto;
   }
@@ -70,6 +70,10 @@
     padding: 0;
     border-bottom-right-radius: var(--space);
     border-bottom-left-radius: var(--space);
+
+    button {
+      padding: var(--space-sm) var(--space) var(--space-sm) var(--space);
+    }
 
     button:first-child {
       border-bottom-left-radius: var(--space);
